# tinyrpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.py  gen_proto.sh
doc/: rpc_call.puml  service_register.puml
example/: CMakeLists.txt
example/callee/: CMakeLists.txt  contactservice.cc  contactservice.conf  userservice.cc
example/caller/: CMakeLists.txt  client.cc  client.conf
example/proto/: contact.proto  echo.proto  resultcode.proto  user.proto
src/: CMakeLists.txt  rpcchannel.cc  rpcchannel.h  rpcconfig.cc  rpcconfig.h  rpccontroller.cc  rpccontroller.h  rpcprovider.cc  rpcprovider.h  rwlock.h  zookeeperutil.cc  zookeeperutil.h
src/proto/: tinyrpcheader.proto
